# tangle-needle

./: .gitignore  Dockerfile  README.md  pyproject.toml
gcloud/hmm-detect/: instruction.template  job.json.template  prep-general.sh.template  prep-task.sh.template  setup.py
needle/: clean.py  detect.py  expand.py  hits.py  hmm.py  match.py  sequence.py
scripts/: demux-outputs.py  export-protein-results.py  hmmsearch-genome.py  pool-contigs.py  remove-contained.py  search-genome
staging/: generate-ref-protein-tsv.py  gff.py  test_gff.py
tests/: test_detect.py  test_hits.py  test_hmm.py  test_match.py  test_sequence.py
tests/needle/: test_clean.py  test_expand.py  test_hits.py
tests/scripts/: test_demux_outputs.py  test_remove_contained.py
tests/tangle/: test_match.py
