[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "needle"
version = "0.1.0"
dependencies = [
  "heap @ git+https://github.com/benjiec/tangle-heap.git@9416162",
  "tangle @ git+https://github.com/benjiec/tangle.git@44def4e",
  "biopython>=1.81",
  "bcbio-gff>=0.6.9",
  "pyahocorasick>=2.3.0",
]
description = "Protein Detection from HMM Profiles"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
]

[tool.setuptools.packages.find]
where = ["."]
